--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
   }
 }
